fix z-index with bottom actions after leaflet-1.0 upgrade

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -365,6 +365,7 @@ html, body, #container, #elm, #map {
     width: 100%;
     justify-content: center;
     font-weight: 500;
+    z-index: 1;
   }
 
   .floating-actions {
